.travis.yml: make sure we run correct golangci-lint binary
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
 
 script:
   - go test -v -coverprofile=coverage.txt -covermode=atomic ./...
-  - golangci-lint run
+  - $HOME/bin/golangci-lint run
   - golint -set_exit_status $(go list ./...)
 
 after_success:
