--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,21 @@ install: go get ./...
 before_script:
   - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $HOME/bin v1.21.0
   - go get -u golang.org/x/lint/golint
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 
 script:
-  - make
+  - make build
+  - go test -v -coverprofile=c.out -covermode=atomic ./...
+  - make lint
 
-after_success:
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - cp c.out coverage.txt
   - bash <(curl -s https://codecov.io/bash)
 
 env:
   global:
     - GO111MODULE=on
+    - CC_TEST_REPORTER_ID=6e107e510c5479f40b0ce9166a254f3f1ee0bc547b3e48281bada1a5a32bb56d
