integration/Dockerfile: add bash and vim to the container
So debugging issues is easier.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/integration/Dockerfile
+++ b/integration/Dockerfile
@@ -4,4 +4,6 @@ FROM golang:1.13-alpine
 # - docker for spawning further Docker containers
 # - curl for installing CI tools
 # - build-base for make and gcc, required for running unit tests
-RUN apk add -U docker curl build-base
+# - bash and bash-completion for usable shell
+# - vim for modifying files
+RUN apk add -U docker curl build-base bash bash-completion vim
