--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ script:
   - make all-cover
 
 after_script:
-  - make codecov codeclimate EXIT_CODE=$TRAVIS_TEST_RESULT
+  - make cover-upload EXIT_CODE=$TRAVIS_TEST_RESULT
