Add libvirt testing environment
Which can be used as alternative when doing local tests.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ kubeconfig
 .env
 *.tar.gz
 crash.log
+flatcar_production_qemu_image.img
+flatcar_production_qemu_image.img.bz2
+*.auto.tfvars
+pool
+terraform-provider-ct
+terraform-provider-libvirt
