.goreleser.yml: enable signing and set github owner and repo name
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,3 +21,9 @@ changelog:
 release:
   draft: true
   prerelease: true
+  github:
+    owner: flexkube
+    name: libflexkube
+
+signs:
+- artifacts: all
