--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ flatcar_production_qemu_image.img
 flatcar_production_qemu_image.img.bz2
 *.auto.tfvars
 pool
+terraform-provider-ct
+terraform-provider-libvirt
