Update golangci-lint to latest version
And fix new found issues.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,3 +6,9 @@ issues:
     - linters:
       - godot
       source: "(front proxy CA certificate,|certificate, as recommended by)"
+    - linters:
+      - forbidigo
+      text: "use of `fmt.Printf` forbidden by pattern"
+    - linters:
+      - forbidigo
+      text: "use of `fmt.Println` forbidden by pattern"
