--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,4 +1,16 @@
+output:
+  sort-results: true
+
+run:
+  timeout: 10m
+  build-tags:
+    - e2e
+    - integration
+
 issues:
+  exclude-use-default: false
+  max-same-issues: 0
+  max-issues-per-linter: 0
   exclude-rules:
     - linters:
       - paralleltest
@@ -12,3 +24,74 @@ issues:
     - linters:
       - forbidigo
       text: "use of `fmt.Println` forbidden by pattern"
+
+linters:
+  disable:
+    # Triggers on TODOs in the code, which is fine to put.
+    - godox
+    # As some lines are long because of the type names, and breaking it down decreases redability.
+    - lll
+    # Disabled until tests are split and moved to the right file names.
+    - testpackage
+    # Disabled until we implement some error types and migrate to use them.
+    - goerr113
+    # As we use formatting rules from different linter and they are conflicting.
+    - gci
+    # To be able to make use of Go zero-value feature.
+    - exhaustivestruct
+  enable:
+    - asciicheck
+    - bodyclose
+    - deadcode
+    - depguard
+    - dogsled
+    - dupl
+    - errcheck
+    - errorlint
+    - exhaustive
+    - exportloopref
+    - forbidigo
+    - funlen
+    - gochecknoglobals
+    - gochecknoinits
+    - gocognit
+    - goconst
+    - gocritic
+    - gocyclo
+    - godot
+    - gofmt
+    - gofumpt
+    - goheader
+    - goimports
+    - golint
+    - gomnd
+    - gomodguard
+    - goprintffuncname
+    - ifshort
+    - ineffassign
+    - interfacer
+    - makezero
+    - maligned
+    - misspell
+    - nakedret
+    - nestif
+    - nlreturn
+    - noctx
+    - nolintlint
+    - paralleltest
+    - prealloc
+    - predeclared
+    - rowserrcheck
+    - scopelint
+    - sqlclosecheck
+    - structcheck
+    - stylecheck
+    - thelper
+    - tparallel
+    - typecheck
+    - unconvert
+    - unparam
+    - varcheck
+    - whitespace
+    - wrapcheck
+    - wsl
