--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: make all-cover
+      - uses: paambaati/codeclimate-action@v2.2.4
+        with:
+          coverageCommand: make codeclimate
+      - uses: codecov/codecov-action@v1
+        with:
+          files: c.out
   codespell:
-    name: Codespell
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
     steps:
-      - uses: actions/checkout@v2.3.3
+      - uses: actions/checkout@v2
       - uses: codespell-project/actions-codespell@master
         with:
           skip: .git,state.yaml,go.sum,terraform.tfstate,terraform.tfstate.backup,./local-testing/resources
