Update golangci-lint to v1.37.0
New linter cyclop found some overly complex functions, so they has been
refactored to reduce the complexity.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -42,10 +42,12 @@ linters:
   enable:
     - asciicheck
     - bodyclose
+    - cyclop
     - deadcode
     - depguard
     - dogsled
     - dupl
+    - durationcheck
     - errcheck
     - errorlint
     - exhaustive
@@ -81,6 +83,7 @@ linters:
     - paralleltest
     - prealloc
     - predeclared
+    - revive
     - rowserrcheck
     - scopelint
     - sqlclosecheck
