--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -39,3 +39,4 @@ archives:
 
 signs:
 - artifacts: all
+  args: ["-u", "{{ .Env.GPG_FINGERPRINT  }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
