--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -40,3 +40,6 @@ archives:
 signs:
 - artifacts: all
   args: ["-u", "{{ .Env.GPG_FINGERPRINT  }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
+
+source:
+  enabled: true
