--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,3 +80,28 @@ jobs:
           ignore_words_list: uptodate
           check_filenames: true
           check_hidden: true
+  vagrant:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install vagrant
+        run: |
+          curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+          sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+          sudo apt-get update && sudo apt-get install vagrant
+      - run: make test-vagrant
+  terraform:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get dependencies
+        run: |
+          sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
+          curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+          sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+          sudo apt-get update && sudo apt-get install terraform
+          wget https://download.opensuse.org/repositories/systemsmanagement:/terraform/Ubuntu_20.04/amd64/terraform-provider-libvirt_0.6.3+git.1604843676.67f4f2aa-13.1_amd64.deb
+          sudo apt install ./terraform-provider-libvirt_0.6.3+git.1604843676.67f4f2aa-13.1_amd64.deb
+      - run: |
+          terraform -chdir=libvirt init
+          make test-terraform
