.golangci.yml: enable 'always' for 'makezero' linter
So it checks all use of 'make()' for use with append.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -43,6 +43,10 @@ issues:
         - tagliatelle
       text: "(CIDR|CA|DNS|API|CN|SSH).+(Cidr|Ca|Dns|Api|Cn|Ssh)"
 
+linters-settings:
+  makezero:
+    always: true
+
 linters:
   disable:
     # Triggers on TODOs in the code, which is fine to put.
