.golangci.yml: enable extra checks for errcheck linter
And fix code which started being triggered.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -44,6 +44,9 @@ issues:
       text: "(CIDR|CA|DNS|API|CN|SSH).+(Cidr|Ca|Dns|Api|Cn|Ssh)"
 
 linters-settings:
+  errcheck:
+    check-type-assertions: true
+    check-blank: true
   makezero:
     always: true
 
