--- a/.golangci.yml
+++ b/.golangci.yml
@@ -49,6 +49,8 @@ linters-settings:
     check-blank: true
   makezero:
     always: true
+  wsl:
+    force-err-cuddling: true
 
 linters:
   disable:
