.golangci.yml: configure 'gci' linter/formatter
To enforce that local module imports are separate from third party
imports.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -47,6 +47,8 @@ linters-settings:
   errcheck:
     check-type-assertions: true
     check-blank: true
+  gci:
+    local-prefixes: github.com/flexkube/libflexkube
   makezero:
     always: true
   wsl:
