--- a/.golangci.yml
+++ b/.golangci.yml
@@ -49,6 +49,8 @@ linters-settings:
     check-blank: true
   gci:
     local-prefixes: github.com/flexkube/libflexkube
+  godot:
+    capital: true
   makezero:
     always: true
   wsl:
