--- a/.golangci.yml
+++ b/.golangci.yml
@@ -53,6 +53,10 @@ linters-settings:
     capital: true
   makezero:
     always: true
+  nolintlint:
+    allow-leading-space: false
+    require-explanation: true
+    require-specific: true
   wsl:
     force-err-cuddling: true
 
