--- a/.golangci.yml
+++ b/.golangci.yml
@@ -51,6 +51,8 @@ linters-settings:
     local-prefixes: github.com/flexkube/libflexkube
   godot:
     capital: true
+  gofumpt:
+    extra-rules: true
   makezero:
     always: true
   nolintlint:
