.golangci.yml: enable extra rules for govet
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -53,6 +53,11 @@ linters-settings:
     capital: true
   gofumpt:
     extra-rules: true
+  govet:
+    enable-all: true
+    disable:
+      - fieldalignment
+      - shadow
   makezero:
     always: true
   nolintlint:
