e2e: add support for systemd cgroup driver
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
           containerRuntime: docker
           cidrIPsOffset: 1
           kubeletExtraArgs: [--fail-swap-on=false]
+          cgroupDriver: cgroupfs
         EOF
         helm repo add flexkube https://flexkube.github.io/charts/
         sudo chown $(whoami): e2e/keys/id_rsa
