.golangci.yml: enable all rules of revive
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -60,6 +60,8 @@ linters-settings:
     allow-leading-space: false
     require-explanation: true
     require-specific: true
+  revive:
+    enable-all-rules: true
   wsl:
     force-err-cuddling: true
 
