--- a/.golangci.yml
+++ b/.golangci.yml
@@ -60,8 +60,6 @@ linters-settings:
     allow-leading-space: false
     require-explanation: true
     require-specific: true
-  revive:
-    enable-all-rules: true
   wsl:
     force-err-cuddling: true
 
@@ -87,14 +85,17 @@ linters:
     - asciicheck
     - bidichk
     - bodyclose
+    - containedctx
     - contextcheck
     - cyclop
     - deadcode
+    - decorder
     - depguard
     - dogsled
     - dupl
     - durationcheck
     - errcheck
+    - errchkjson
     - errname
     - errorlint
     - exhaustive
@@ -118,10 +119,12 @@ linters:
     - gomoddirectives
     - gomodguard
     - goprintffuncname
+    - grouper
     - ifshort
     - importas
     - ineffassign
     - lll
+    - maintidx
     - makezero
     - misspell
     - nakedret
@@ -137,7 +140,6 @@ linters:
     - promlinter
     - revive
     - rowserrcheck
-    - scopelint
     - sqlclosecheck
     - structcheck
     - stylecheck
