--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -1,24 +1,38 @@
 ---
-version: "2.1"
+version: "3.8"
 services:
-  generate-keys:
+  generate-secrets:
     image: ghcr.io/linuxserver/openssh-server
     entrypoint:
-      - /bin/sh
-      - -c
-      - 'test -f /root/.ssh/id_rsa || ssh-keygen -b 2048 -t rsa -f /root/.ssh/id_rsa -q -N ""'
+      - /usr/local/bin/generate-secrets.sh
     volumes:
-      - ./keys:/root/.ssh
+      - ./secrets:/root/.ssh
+      - ./generate-secrets.sh:/usr/local/bin/generate-secrets.sh
   openssh-server:
     image: ghcr.io/linuxserver/openssh-server
     environment:
       - USER_NAME=core
       - PUID=0
-      - PGID=0
+      - GUID=0
       - PUBLIC_KEY_FILE=/root/.ssh/id_rsa.pub
       - DOCKER_MODS=linuxserver/mods:openssh-server-ssh-tunnel
     volumes:
-      - ./keys:/root/.ssh
+      - ./secrets:/root/.ssh
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 2222:2222
+    network_mode: bridge
+  openssh-server-password:
+    image: ghcr.io/linuxserver/openssh-server
+    environment:
+      - USER_NAME=core
+      - PUBLIC_KEY_FILE=/root/.ssh/id_rsa.pub
+      - PASSWORD_ACCESS=true
+      - USER_PASSWORD_FILE=/root/.ssh/password
+      - DOCKER_MODS=linuxserver/mods:openssh-server-ssh-tunnel
+    volumes:
+      - ./secrets:/root/.ssh
+      - /tmp:/tmp
+    ports:
+      - 22222:2222
+    network_mode: bridge
