e2e/docker-compose.yml: rename container from generate keys to secrets
As we will be generating other secrets than keys soon, e.g. SSH password
for integration tests.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -1,7 +1,7 @@
 ---
 version: "3.8"
 services:
-  generate-keys:
+  generate-secrets:
     image: ghcr.io/linuxserver/openssh-server
     entrypoint:
       - /bin/sh
