e2e/docker-compose.yml: move secret generation commands to script file
So more commands can be easily added.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -4,11 +4,10 @@ services:
   generate-secrets:
     image: ghcr.io/linuxserver/openssh-server
     entrypoint:
-      - /bin/sh
-      - -c
-      - 'test -f /root/.ssh/id_rsa || ssh-keygen -b 2048 -t rsa -f /root/.ssh/id_rsa -q -N ""'
+      - /usr/local/bin/generate-secrets.sh
     volumes:
       - ./keys:/root/.ssh
+      - ./generate-secrets.sh:/usr/local/bin/generate-secrets.sh
   openssh-server:
     image: ghcr.io/linuxserver/openssh-server
     environment:
