Update golangci-lint to latest version v1.44.2
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -44,7 +44,10 @@ linters-settings:
     check-type-assertions: true
     check-blank: true
   gci:
-    local-prefixes: github.com/flexkube/libflexkube
+    sections:
+      - standard
+      - default
+      - prefix(github.com/flexkube/libflexkube)
   godot:
     capital: true
   gofumpt:
