e2e: fix failing integration tests with Docker
https://github.com/linuxserver/docker-baseimage-alpine/pull/85/commits/d2b11d7d0ca90a19da3bd7eb82eab078f7a24047
added tamper protection, which require custom configuration to be owned
by root, otherwise it is not executed.

Taking opportunity, we can actually get rid of Docker mods, as we apply
custom patches to configuration anyway, so then the openssh server
container does not need network for curl and jq anymore to pull
additional mods.

To workaround tampering check, we just use docker-compose to build
temporary images.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -2,14 +2,17 @@
 version: "3.8"
 services:
   generate-secrets:
-    image: ghcr.io/linuxserver/openssh-server
+    build:
+      context: .
+      dockerfile: Dockerfile.openssh-server
     entrypoint:
       - /usr/local/bin/generate-secrets.sh
     volumes:
       - ./secrets:/root/.ssh
-      - ./generate-secrets.sh:/usr/local/bin/generate-secrets.sh
   openssh-server:
-    image: ghcr.io/linuxserver/openssh-server
+    build:
+      context: .
+      dockerfile: Dockerfile.openssh-server
     environment:
       - USER_NAME=core
       - PUID=0
@@ -17,13 +20,9 @@ services:
       - PUBLIC_KEY_FILE=/root/.ssh/id_rsa.pub
       - PASSWORD_ACCESS=true
       - USER_PASSWORD_FILE=/root/.ssh/password
-      - DOCKER_MODS=linuxserver/mods:openssh-server-ssh-tunnel
     volumes:
       - ./secrets:/root/.ssh
       - /tmp:/tmp
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./98-ssh-as-root-with-password:/config/custom-cont-init.d/98-ssh-as-root-with-password
     ports:
       - 2222:2222
-    # Workaround for flaky network inside container.
-    network_mode: bridge
