--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,8 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
     - uses: actions/checkout@v2
+    - name: Setup containerd
+      uses: crazy-max/ghaction-setup-containerd@v1.3.0
     - name: Fetch dependencies and configure tests
       run: |
         docker-compose -f e2e/docker-compose.yml up -d
@@ -87,7 +89,6 @@ jobs:
           nodesCIDR: 172.17.0.0/24
           nodeSSHPort: 2222
           workersCount: 0
-          containerRuntime: docker
           cidrIPsOffset: 1
           kubeletExtraArgs: [--fail-swap-on=false]
           cgroupDriver: cgroupfs
