e2e: remove support for Docker container runtime
Docker shim gets removed with Kubernetes v1.24.0 and CI now uses
containerd, so it can be safely removed.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,9 @@ jobs:
           nodeSSHPort: 2222
           workersCount: 0
           cidrIPsOffset: 1
-          kubeletExtraArgs: [--fail-swap-on=false]
+          kubeletExtraArgs:
+          - --fail-swap-on=false
+          - --container-runtime-endpoint=unix:///run/containerd/containerd.sock
           cgroupDriver: cgroupfs
         EOF
         helm repo add flexkube https://flexkube.github.io/charts/
