--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,7 +133,8 @@ jobs:
         make test-terraform
   semgrep:
     runs-on: ubuntu-latest
+    container:
+      image: returntocorp/semgrep
     steps:
     - uses: actions/checkout@v2
-    # Use dedicated action for nice integration with GitHub.
-    - uses: returntocorp/semgrep-action@v1
+    - run: semgrep ci --config .semgrep.yml
