Update golangci-lint to latest version v1.48.0
And fix new issues.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -131,7 +131,6 @@ linters:
     - gomodguard
     - goprintffuncname
     - grouper
-    - ifshort
     - importas
     - ineffassign
     - lll
@@ -164,6 +163,7 @@ linters:
     - typecheck
     - unconvert
     - unparam
+    - usestdlibvars
     - varcheck
     - varnamelen
     - wastedassign
