--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Setup containerd
       uses: crazy-max/ghaction-setup-containerd@v2
+      with:
+        containerd-version: v1.6.6
     - name: Fetch dependencies and configure tests
       run: |
         docker-compose -f e2e/docker-compose.yml up -d
