Update golangci-lint to latest version v1.50.0
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -103,6 +103,7 @@ linters:
     - depguard
     - dogsled
     - dupl
+    - dupword
     - durationcheck
     - errcheck
     - errchkjson
@@ -134,7 +135,6 @@ linters:
     - ineffassign
     - interfacebloat
     - lll
-    - logrlint
     - maintidx
     - makezero
     - misspell
@@ -158,6 +158,7 @@ linters:
     - stylecheck
     - tagliatelle
     - tenv
+    - testableexamples
     - thelper
     - tparallel
     - typecheck
