Update golangci-lint and Go to latest versions
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -93,6 +93,8 @@ linters:
     - golint
     - interfacer
     - maligned
+    - copyloopvar
+    - intrange
   enable:
     - asasalint
     - asciicheck
